--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,11 @@
-# Sample localization file for English. Add more files in this directory for other locales.
-# See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
-
 en:
-  hello: "Hello world"
+  feature: Feature
+  chore: Chore
+  bug: Bug
+  
+  unscheduled: Unscheduled
+  unstarted: Unstarted
+  started: Started
+  finished: Finished
+  delivered: Delivered
+  accepted: Accepted
